<resources>
    <string name="app_name">Цифровой университет</string>
    <string name="title_news">Новости</string>
    <string name="title_cam">Сканер</string>
    <string name="title_map">Карта</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_achievements">Достижения</string>
    <string name="title_chat">Мессенджер</string>
    <string name="title_note">Заметки</string>
    <string name="refKey">refKey</string>
    <string name="title_activity_activitivy_news">ActivitivyNews</string>
</resources>