<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_cam"
        android:icon="@drawable/baseline_qr_code_scanner_24"
        android:title="@string/title_cam" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/navigation_achievements"
        android:icon="@drawable/baseline_task_alt_24"
        android:title="@string/title_achievements" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/baseline_chat_bubble_outline_24"
        android:title="@string/title_chat" />

</menu>